[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmon71"
version = "0.1.0"
description = "Social agent prototype: video enhancement, hashtag generation, and social posting helpers."
readme = "agents/README.md"
license = {"text": "MIT"}
authors = [ { name = "harmon34609" } ]
requires-python = ">=3.11"

dependencies = [
    "moviepy>=1.0.3",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "opencv-python>=4.7",
    "tqdm>=4.65",
    "ffmpeg-python>=0.3.0",
]

[project.scripts]
harmon71 = "agents.agent:main"
